fix(Slider): touch target got hidden by overflow property

--- a/src/components/slider/_slider.scss
+++ b/src/components/slider/_slider.scss
@@ -8,7 +8,6 @@ $_transition: 200ms cubic-bezier(0.22, 0.61, 0.36, 1);
 .flexy-slider {
   display: flex;
 
-  overflow: hidden;
   position: relative;
   height: map.get($_slider, 'thumb-height');
   width: 320px;
